fixed issue #44: Fix gravatar box (https://github.com/SingaporeClouds/SingPath-GUI/issues/44)

--- a/kit/_css/SingpathMain.css
+++ b/kit/_css/SingpathMain.css
@@ -2528,3 +2528,7 @@ div#popup_problemset_path {
     padding-left: 9px;
     padding-right: 11px;
 }
+div#friendsTextBoxtext span.player {
+    display:block;
+    float:left;
+}
